# smol_collor

./: .gitignore  CMakeLists.txt  README.md  smollor-config.cmake
include/: color.h  smol_color.h
include/impl/: background.h  foreground.h  form.h
source/: color.cpp
test/: test.cpp
